# bump-pydantic

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yml
bump_pydantic/: __about__.py  __main__.py  codemods.py  command.py  glob_helpers.py  helpers.py  main.py  transformers.py
bump_pydantic/.github/workflows/: ci.yml
bump_pydantic/codemods/: __init__.py  add_annotations.py  add_default_none.py  class_def_visitor.py  con_func.py  custom_types.py  field.py  mypy_visitor.py  replace_config.py  replace_generic_model.py  replace_imports.py  replace_methods.py  root_model.py  validator.py
bump_pydantic/collectors/: base_classes.py
bump_pydantic/commands/: add_default_none.py  rename_method.py  rename_method_call.py  replace_call_param.py  replace_config_class.py  use_settings.py
bump_pydantic/markers/: find_base_model.py
project/: add_none.py  config_to_model.py  rename_method.py  replace_generic.py  settings.py
tests/: __init__.py  test_add_default_none.py  test_class_def_visitor.py  test_codemod.py  test_generic_model.py  test_integration.py  test_replace_config.py  test_replace_imports.py
tests/collectors/: test_base_classes.py
tests/commands/: test_add_default_none.py  test_pydantic_settings.py  test_rename_method_call.py  test_replace_call_param.py
tests/integration/: case.py  folder.py  test_cli.py
tests/integration/cases/: __init__.py  add_none.py  add_none.toml  base_settings.py  base_settings.toml  con_func.py  config_to_model.py  config_to_model_cases.toml  custom_types.py  field.py  field.toml  folder_inside_folder.py  generic_model.py  get_cases_from_toml_files.py  is_base_model.py  is_base_model.toml  replace_validator.py  replace_validator.toml  root_model.py  root_model.toml  unicode.py  unicode.toml  utf_8_decode.py
tests/unit/: test_add_annotations.py  test_add_default_none.py  test_class_def_visitor.py  test_con_func.py  test_custom_types.py  test_field.py  test_generic_model.py  test_glob.py  test_glob_helpers.py  test_replace_config.py  test_replace_imports.py  test_root_model.py  test_validator.py
