[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bump-pydantic"
dynamic = ["version"]
description = "Convert Pydantic from V1 to V2 ♻"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Pydantic",
]
dependencies = ["typer>=0.7.0", "libcst", "rich", "typing_extensions"]

[project.urls]
Documentation = "https://github.com/pydantic/bump-pydantic#readme"
Issues = "https://github.com/pydantic/bump-pydantic/issues"
Source = "https://github.com/pydantic/bump-pydantic"

[project.scripts]
bump-pydantic = "bump_pydantic.main:app"

[tool.hatch.version]
path = "bump_pydantic/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "rich",
  "pydantic",
  "pytest-xdist",
  "rtoml",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]
lint = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
  "mypy {args:bump_pydantic tests}",
]
format = ["black {args:.}", "ruff --fix {args:.}"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.black]
target-version = ["py38"]
skip-string-normalization = true
line-length = 120

[tool.ruff]
line-length = 120
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
mccabe = { max-complexity = 14 }
isort = { known-first-party = ['bump_pydantic', 'tests'] }
target-version = 'py38'

[tool.pytest.ini_options]
xfail_strict = true

[tool.coverage.run]
source_pkgs = ["bump_pydantic"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: nocover",
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
